# solana-place

./: .gitignore  README.md  SECURITY.md  package-lock.json  package.json
chains/: .gitignore
chains/ethereum/: README.md  package-lock.json  package.json  project.json
chains/ethereum/contracts/: Game.sol
chains/ethereum/scripts/: deploy.ts
chains/ethereum/test/: Game.ts
chains/solana/: Anchor.toml  README.md  package-lock.json  package.json  project.json  tsconfig.json
chains/solana/migrations/: copy-picture.ts  deploy.ts  game-account-util.ts
chains/solana/programs/solana-place/: Cargo.toml
chains/solana/programs/solana-place/src/: lib.rs
chains/solana/programs/solana-place/src/events/: pixel_colors_changed_event.rs
chains/solana/programs/solana-place/src/instructions/: fee_helper.rs  initialize_only.rs
chains/solana/programs/solana-place/src/state/: game_account.rs
chains/solana/tests/: solana-place.ts  test-board-utils.ts  test-utils.ts
client/: .prettierignore  config-overrides.js  package-lock.json  package.json  project.json  tsconfig.json
client/public/: index.html  manifest.json
client/src/: app.tsx  index.tsx
program/: Anchor.toml  package-lock.json  package.json  tsconfig.json
program/migrations/: copy-picture.ts  deploy.ts  game-account-util.ts
program/tests/: solana-place.ts  test-board-utils.ts  test-utils.ts
server/: .env.example  .prettierignore  package-lock.json  package.json  project.json  tsconfig.json
server/src/: Application.ts  index.ts
server/tests/: ethereum.chain.test.ts  protocol.test.ts
(+192 files in other folders)
