[package]
name = "solana-place"
version = "0.1.0"
description = "Solana Place"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_place"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.25.0"
borsh = { version = "0.9.3", features = ["const-generics"] }
solana-security-txt = "1.0.1"
